# tpch-duckdb-bench

./: .gitmodules  README.md  convert_to_parquet.py  pyproject.toml  run.py
results/: consolidated.csv
results/datafusion/: sf1000_48.csv  sf1000_native.csv  sf1000_streaming_28.csv  sf100_48.csv  sf100_native.csv  sf100_partitioned.csv  sf100_streaming_28.csv  sf10_streaming_28.csv  sf500_48.csv  sf500_native.csv  sf500_streaming_28.csv
results/polars/: sf1000_streaming.csv  sf100_streaming.csv  sf10_memory.csv  sf10_streaming.csv  sf500_streaming.csv
results/runs/: run_sf1000_22.csv  run_sf1000_28.csv  run_sf1000_38.csv  run_sf1000_boost.csv  run_sf100_22.csv  run_sf100_28.csv  run_sf100_38.csv  run_sf100_boost.csv  run_sf500_22.csv  run_sf500_28.csv  run_sf500_38.csv  run_sf500_boost.csv
